extends Control

func _ready() -> void:
	$fadeout.show()
	$fadeout/AnimationPlayer.play("fade_in")
	



func _on_b_deck_pressed() -> void:
	pass # Replace with function body.


func _on_b_shop_pressed() -> void:
	pass # Replace with function body.


func _on_b_start_pressed() -> void:
	pass # Replace with function body.
